--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="RockMx" content="La radio como siempre debió ser">
   <meta name="Rock_Mx" content="radiostreaming">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../rockmx/CSS/style.css">
+  <link rel="stylesheet" href="../rockmx/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">   
   
   <script>
